NBBIB-225 Correct menu (collapsed)

--- a/custom/themes/nbbib_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nbbib_lib_unb_ca/src/scss/style.scss
@@ -34,6 +34,20 @@ header {
         }
       }
     }
+
+    // Collapsed menu.
+    button.navbar-toggler {
+      max-height: 40px;
+      max-width: 64px;
+
+      &:after {
+        font-size: 1rem;
+        position: relative;
+        top: -24px;
+        left: -64px;
+        content: "Menu";
+      }
+    }
   }
 }
 
